<resources>
    <string name="app_name">Danielo\'s Restaurant</string>
    <string name="splashTitle">Danielo\'s\nRestaurant</string>
    <string name="loadingText">cargando</string>
    <string name="menuTitle">O p c i o n e s</string>
    <string name="Opc1">Platillos y Bebidas</string>
    <string name="Opc2">Realizar Pedido</string>
    <string name="Opc3">Historial de Pedidos</string>
    <string name="platillosTitle">Platillos y Bebidas</string>
    <string name="lbPlatosItem1">Nombre:</string>
    <string name="lbPlatosItem2">Detalle:</string>
    <string name="lbPlatosItem3">Precio:</string>
    <string name="lbCheckBox">Añadir al Pedido</string>
    <string name="floatingButtonText">Pedido</string>
    <string name="pedidoTitle">Confirmar Pedido</string>
    <string name="lbTelefono">Ingrese su número de Teléfono</string>
    <string name="lbNombreCliente">Ingrese su Nombre y Apellido</string>
    <string name="lbCantidad">Cantidad</string>
    <string name="btnConfirmar">Confirmar Pedido</string>
    <string name="x">x</string>
    <string name="total">CALCULAR TOTAL</string>
    <string name="facturaTitle">FACTURA</string>
    <string name="lbOrden">Orden:</string>
    <string name="lbCliente">Cliente:</string>
    <string name="lbTelefonoC">Teléfono:</string>
    <string name="lbFecha">Fecha del pedido:</string>
    <string name="lbResumen">Resumen de compra:</string>
    <string name="lbTotalC">Total:</string>
    <string name="btnVolver">Volver al Menú</string>
    <string name="historialTitle">Historial de Pedidos</string>
    <string name="historialbtn">Buscar Historial</string>
</resources>